--- a/services/music.html
+++ b/services/music.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-ZM4LK5K0LJ');
 </script>
     <link rel="stylesheet" href="style.css">
-    <title>Music</title>
+    <title>Musique</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -520,25 +520,25 @@ background-color: black;
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-<div class="sidebar">
+  <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -550,11 +550,11 @@ background-color: black;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="client.html">
@@ -566,9 +566,9 @@ background-color: black;
      <li>
        <a href="web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="api.html">
@@ -580,50 +580,50 @@ background-color: black;
      <li>
        <a href="store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
   </div>
   <section class="home-section">
 <ul class="breadcrumb">
-  <li><a href="/home.html">Website</a></li>
-  <li><a href="/web-app.html">Web App</a></li>
-  <li><a href="">Services</a></li>
-  <li>Music</li>
+<li><a href="/home.html">Site Web</a></li>
+   <li><a href="/web-app.html">Application Web</a></li>
+   <li><a href="">Services</a></li>
+   <li>Musique</li>
 </ul>
 <br>
-            <h1 style="color:red;">Music</h1>
+             <h1 style="color:red;">Musique</h1>
 <div>
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for music" title="Type in a name">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Rechercher de la musique" title="Saisir un nom">
 <ul id="myUL">
   <li><button type="button" class="collapsible">Together As One</button>
 <div class="content">
-    <p>"Together As One" is a 2-minute song that was posted in the form of an audio video to PJ Masks' Topic YouTube channel on September 16, 2021. It was then posted in the form of a music video to PJ Masks' official YouTube channel on September 17, 2021.</p>
+<p>"Together As One" est une chanson de 2 minutes qui a été publiée sous la forme d'une vidéo audio sur la chaîne YouTube Topic de PJ Masks le 16 septembre 2021. Elle a ensuite été publiée sous la forme d'un clip vidéo sur PJ Chaîne YouTube officielle de Masks le 17 septembre 2021.</p>
     <br>
     <audio controls>
         <source src="music/Together As One.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
+Votre navigateur ne supporte pas l'élément audio.
       </audio>
 </div></li>
   <li><button type="button" class="collapsible">Shine On Everyone</button>
 <div class="content">
-  <p>"Shine on Everyone" is a 2-minute song that was posted in the form of a music video to PJ Masks' official YouTube channel and DisneyNOW on April 28, 2021.</p>
+<p>"Shine on Everyone" est une chanson de 2 minutes qui a été publiée sous la forme d'un clip vidéo sur la chaîne YouTube officielle de PJ Masks et DisneyNOW le 28 avril 2021.</p>
   <br>
   <audio controls>
     <source src="music/Shine On Everyone.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
+Votre navigateur ne supporte pas l'élément audio.
   </audio> 
   </div></li>
   <li><button type="button" class="collapsible">Make Your Move</button>
 <div class="content">
-<p>"Make Your Move" is a 2-minute song that was posted in the form of an audio video to PJ Masks' Topic YouTube channel and posted on Twitter on December 11, 2020. As of April 28, 2021, this song has been released as a music video on DisneyNOW.</p>
+<p>"Make Your Move" est une chanson de 2 minutes qui a été publiée sous la forme d'une vidéo audio sur la chaîne YouTube Topic de PJ Masks et publiée sur Twitter le 11 décembre 2020. Depuis le 28 avril 2021, cette chanson a été publié sous forme de vidéoclip sur DisneyNOW.</p>
 <br>
 <audio controls>
     <source src="music/Make Your Move.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
+Votre navigateur ne supporte pas l'élément audio.
   </audio> 
 </div></li>
 </ul>
@@ -664,8 +664,8 @@ function myFunction() {
   <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
