--- a/services/texttospeech.html
+++ b/services/texttospeech.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-ZM4LK5K0LJ');
 </script>
     <link rel="stylesheet" href="style.css">
-    <title>Text To Speech</title>
+    <title>Texte pour parler</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -458,15 +458,15 @@ background-color: black;
   </div>
   <section class="home-section">
 <ul class="breadcrumb">
-  <li><a href="/home.html">Website</a></li>
-  <li><a href="/web-app.html">Web App</a></li>
+ <li><a href="/home.html">Site Web</a></li>
+  <li><a href="/web-app.html">Application Web</a></li>
   <li><a href="">Services</a></li>
-  <li>Text to Speech</li>
+<li>Text to Speech</li>
 </ul>
 <br>
       <br><br>
-        <h1>Text to Speech</h1>
-        <p>Select Voice</p>
+        <h1>Synthèse vocale</h1>
+        <p>Sélectionner la voix</p>
         <select id="voices" class="form-select bg-secondary text-light" style="width:100%;background-color:silver;"></select>
         <div class="d-flex mt-4 text-light">
             <div>
@@ -475,23 +475,23 @@ background-color: black;
               <span id="volume-label" class="ms-2" style="color:red;width:100%;">1</span>
             </div>
             <div class="mx-5">
-              <p class="lead">Rate</p>
+              <p class="lead">Évaluer</p>
               <input type="range" min="0.1" max="10" value="1" id="rate" step="0.1" />
               <span id="rate-label" class="ms-2" style="color:blue;width:100%;">1</span>
             </div>
             <div>
               <p class="lead">Pitch</p>
-              <input type="range" min="0" max="2" value="1" step="0.1" id="pitch" />
+              <input type="range" min="0" max="2" value="1" step="0.1" id="hauteur" />
               <span id="pitch-label" class="ms-2" style="color:orange;width:100%">1</span>
             </div>
           </div>
-          <h2>Text</h2>
-          <textarea class="form-control bg-dark text-light mt-5" cols="30" rows="10" placeholder="Type here..." style="text-align:center;width:100%;"></textarea>
+          <h2>Texte</h2>
+          <textarea class="form-control bg-dark text-light mt-5" cols="30" rows="10" placeholder="Tapez ici..." style="text-align:center;width:100% ;"></textarea>
           <div class="mb-5">
-            <button id="start" class="btn btn-success mt-5 me-3" style="background-color:greenyellow;color:blue;padding:30px;font-size:20px;">Start</button>
+            <button id="start" class="btn btn-success mt-5 me-3" style="background-color:greenyellow;color:blue;padding:30px;font-size:20px;">Démarrer</button>
             <button id="pause" class="btn btn-warning mt-5 me-3" style="background-color:red;color:yellow;padding:30px;font-size:20px;">Pause</button>
-            <button id="resume" class="btn btn-info mt-5 me-3" style="background-color:orange;color:blue;padding:30px;font-size:20px;">Resume</button>
-            <button id="cancel" class="btn btn-danger mt-5 me-3" style="background-color:black;color:red;padding:30px;font-size:20px;">Cancel</button>
+            <button id="resume" class="btn btn-info mt-5 me-3" style="background-color:orange;color:blue;padding:30px;font-size:20px;">Reprendre</button>
+            <button id="cancel" class="btn btn-danger mt-5 me-3" style="background-color:black;color:red;padding:30px;font-size:20px;">Annuler</button>
           </div>
       <script>
       let speech = new SpeechSynthesisUtterance();
@@ -547,8 +547,8 @@ background-color: black;
       <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
