--- a/services/arts.html
+++ b/services/arts.html
@@ -529,25 +529,25 @@ background-color: black;
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-<div class="sidebar">
+  <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -559,11 +559,11 @@ background-color: black;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="client.html">
@@ -575,9 +575,9 @@ background-color: black;
      <li>
        <a href="web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="api.html">
@@ -589,27 +589,27 @@ background-color: black;
      <li>
        <a href="store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
   </div>
   <section class="home-section">
 <ul class="breadcrumb">
-  <li><a href="/home.html">Website</a></li>
-  <li><a href="/web-app.html">Web App</a></li>
-  <li><a href="">Services</a></li>
-  <li>Arts</li>
+<li><a href="/home.html">Site Web</a></li>
+   <li><a href="/web-app.html">Application Web</a></li>
+   <li><a href="">Services</a></li>
+   <li>Arts</li>
 </ul>
 <br>
 <h1>Arts</h1>
-<p>Welcome to Arts! A place where awesome and creative artists from all over the world shared their arts. A place to check out arts uploaded by artists on Software and Website Developer Team. </p>
+<p>Bienvenue sur Arts ! Un endroit où des artistes impressionnants et créatifs du monde entier ont partagé leurs arts. Un endroit pour découvrir les arts téléchargés par les artistes sur l'équipe de développement de logiciels et de sites Web. </p>
 <br>
-<button type="button" class="collapsible">Featured</button>
+<button type="button" class="collapsible">En vedette</button>
 <div class="content">
-  <p>A featured section for all awesome created arts handpicked by Software and Website Developer Team team. A section with all awesome arts published and uploaded by artist from all over the world in our web app. A place to enjoy all artist creative arts. </p>
+   <p>Une section vedette pour tous les arts créés impressionnants triés sur le volet par JstMStudio. Une section avec tous les arts impressionnants publiés et téléchargés par des artistes du monde entier dans notre application Web. Un endroit pour profiter de tous les arts créatifs des artistes. </p>
   <br>
   <div class="row"> 
   <div class="column">
@@ -623,9 +623,9 @@ background-color: black;
   </div> 
   </div>
 </div>
-<button type="button" class="collapsible">Popular</button>
+<button type="button" class="collapsible">Populaire</button>
 <div class="content">
-  <p>A section with all popular arts posted in JstMStudio website by awesome creative artist from all over the world. </p>
+   <p>Une section avec tous les arts populaires publiés sur le site Web de JstMStudio par des artistes créatifs impressionnants du monde entier. </p>
   <br>
   <div class="row"> 
   <div class="column">
@@ -638,11 +638,11 @@ background-color: black;
   </div> 
   </div>
 </div>
-<button type="button" class="collapsible">All</button>
+<button type="button" class="collapsible">Tous</button>
 <div class="content">
-  <p>A place with all arts posted on JstMStudio Team Web App. All arts here are posted by awesome and creative artists from all over the world. From fan arts, cosplay, anime to digital arts and to fantasy, all had been listed here for everyone to view. </p>
-  <br>
-  <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+   <p>Un lieu avec tous les arts publiés sur l'application Web de l'équipe JstMStudio. Tous les arts ici sont publiés par des artistes géniaux et créatifs du monde entier. Des fan arts, du cosplay, de l'anime aux arts numériques et à la fantaisie, tout avait été répertorié ici pour que tout le monde puisse le voir. </p>
+   <br>
+   <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Rechercher des noms.." title="Saisir un nom">
   <ul id="myUL">
   <div class="row"> 
   <div class="column">
@@ -694,8 +694,8 @@ for (i = 0; i < coll.length; i++) {
     <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
