--- a/services/app-store.html
+++ b/services/app-store.html
@@ -716,25 +716,25 @@ background-color: black;
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-<div class="sidebar">
+  <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -746,11 +746,11 @@ background-color: black;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="client.html">
@@ -762,9 +762,9 @@ background-color: black;
      <li>
        <a href="web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="api.html">
@@ -776,41 +776,41 @@ background-color: black;
      <li>
        <a href="store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
   </div>
   <section class="home-section">
 <ul class="breadcrumb">
-  <li><a href="/home.html">Website</a></li>
-  <li><a href="/web-app.html">Web App</a></li>
+  <li><a href="/home.html">Site Web</a></li>
+  <li><a href="/web-app.html">Application Web</a></li>
   <li><a href="">Services</a></li>
-  <li>App Store</li>
+  <li>Magasin d'applications</li>
 </ul>
 <br>
       <div style="padding:16px;color:red;text-align:center;">
-<h2>App Store</h2>
+<h2>Magasin d'applications</h2>
 
-<strong><p>Welcome to JstMStudio App Store! A place to search for apps and lookup for an app information. A place to discover amazing apps on the internet for free. A place to download apps onto your devices.</p></strong>
+<strong><p>Bienvenue dans l'App Store JstMStudio ! Un endroit pour rechercher des applications et rechercher des informations sur une application. Un endroit pour découvrir gratuitement des applications incroyables sur Internet. Un endroit pour télécharger des applications sur vos appareils.</p></strong>
 <br>
-<button type="button" class="collapsible">App List</button>
+<button type="button" class="collapsible">Liste des applications</button>
 <div class="content">
-<h1>App List</h1>
-<p>Welcome to the app list in JstMStudio App Store. A directory of apps in JstMStudio App Store for everyone to discover for and know more about amazing apps. Check out all apps uploaded onto JstMStudio App Store here. </p>
+<h1>Liste des applications</h1>
+<p>Bienvenue dans la liste des applications de JstMStudio App Store. Un répertoire d'applications dans JstMStudio App Store pour que tout le myde puisse découvrir et en savoir plus sur des applications étonnantes. Découvrez toutes les applications téléchargées sur JstMStudio App Store ici. </p>
 <br>
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for app names!" title="Type in a name">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Rechercher des noms d'applications !" title="Tapez un nom">
 
-<ul id="myUL">
-  <li><button type="button" class="collapsible">App 1</button><div class="content">
+<ul id="myUL1">
+  <li><button type="button" class="collapsible">Application 1</button><div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div></li>
-  <li><button type="button" class="collapsible">App 2</button><div class="content">
+  <li><button type="button" class="collapsible">Application 2</button><div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div></li>
-  <li><button type="button" class="collapsible">App 3</button><div class="content">
+  <li><button type="button" class="collapsible">Application 3</button><div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div></li>
 </ul>
@@ -849,89 +849,89 @@ for (i = 0; i < coll.length; i++) {
 }
 </script>
 </div>
-<button type="button" class="collapsible1">Category</button>
+<button type="button" class="collapsible1">Catégorie</button>
 <div class="content">
-<h1>Category</h1>
-<p><strong>Welcome to the category list of JstMStudio! A list of apps categoried into many categories by JstMStudio.Check out the category you like with all the apps included.</strong></p> 
-<button type="button" class="collapsible">Popular Apps</button>
+<h1>Catégorie</h1>
+<p><strong>Bienvenue dans la liste des catégories de JstMStudio ! Une liste d'applications classées dans de nombreuses catégories par JstMStudio. Découvrez la catégorie que vous aimez avec toutes les applications incluses.</strong></p>
+<button type="button" class="collapsible">Applications populaires</button>
 <div class="content">
-<input type="text" id="myInput1" onkeyup="myFunction2()" placeholder="Search for app names.." title="Type in a name">
+<input type="text" id="myInput1" onkeyup="myFunction2()" placeholder="Rechercher des noms d'applications.." title="Saisir un nom">
 
 <ul id="myUL1">
-  <li><a href="#">NoneA</a></li>
-  <li><a href="#">NoneB</a></li>
+  <li><a href="#">AucunA</a></li>
+  <li><a href="#">AucunB</a></li>
 
-  <li><a href="#">NoneC</a></li>
-  <li><a href="#">NoneD</a></li>
+  <li><a href="#">AucunC</a></li>
+  <li><a href="#">AucunD</a></li>
 
-  <li><a href="#">NoneE</a></li>
-  <li><a href="#">NoneF</a></li>
-  <li><a href="#">NoneG</a></li>
+  <li><a href="#">AucunE</a></li>
+  <li><a href="#">AucunF</a></li>
+  <li><a href="#">AucunG</a></li>
 </ul>
 
 </div>
-<button type="button" class="collapsible">Trending Apps</button>
+<button type="button" class="collapsible">Applications tendance</button>
 <div class="content">
-<input type="text" id="myInput2" onkeyup="myFunction3()" placeholder="Search for app names.." title="Type in a name">
+<input type="text" id="myInput2" onkeyup="myFunction3()" placeholder="Rechercher des noms d'applications.." title="Saisir un nom">
 
 <ul id="myUL2">
-  <li><a href="#">NoneA</a></li>
-  <li><a href="#">NoneB</a></li>
+  <li><a href="#">AucunA</a></li>
+  <li><a href="#">AucunB</a></li>
 
-  <li><a href="#">NoneC</a></li>
-  <li><a href="#">NoneD</a></li>
+  <li><a href="#">AucunC</a></li>
+  <li><a href="#">AucunD</a></li>
 
-  <li><a href="#">NoneE</a></li>
-  <li><a href="#">NoneF</a></li>
-  <li><a href="#">NoneG</a></li>
+  <li><a href="#">AucunE</a></li>
+  <li><a href="#">AucunF</a></li>
+  <li><a href="#">AucunG</a></li>
 </ul>
 </div>
-<button type="button" class="collapsible">Gaming</button>
+<button type="button" class="collapsible">Jeux</button>
 <div class="content">
-<input type="text" id="myInput3" onkeyup="myFunction4()" placeholder="Search for app names.." title="Type in a name">
+<input type="text" id="myInput3" onkeyup="myFunction4()" placeholder="Rechercher des noms d'applications.." title="Saisir un nom">
 
 <ul id="myUL3">
-  <li><a href="#">NoneA</a></li>
-  <li><a href="#">NoneB</a></li>
+  <li><a href="#">AucunA</a></li>
+  <li><a href="#">AucunB</a></li>
 
-  <li><a href="#">NoneC</a></li>
-  <li><a href="#">NoneD</a></li>
+  <li><a href="#">AucunC</a></li>
+  <li><a href="#">AucunD</a></li>
 
-  <li><a href="#">NoneE</a></li>
-  <li><a href="#">NoneF</a></li>
-  <li><a href="#">NoneG</a></li>
+  <li><a href="#">AucunE</a></li>
+  <li><a href="#">AucunF</a></li>
+  <li><a href="#">AucunG</a></li>
 </ul>
 </div>
-<button type="button" class="collapsible">Tools</button>
+<button type="button" class="collapsible">Outils</button>
 <div class="content">
-<input type="text" id="myInput4" onkeyup="myFunction5()" placeholder="Search for app names.." title="Type in a name">
+<input type="text" id="myInput4" onkeyup="myFunction5()" placeholder="Rechercher des noms d'applications.." title="Saisir un nom">
 
 <ul id="myUL4">
-  <li><a href="#">NoneA</a></li>
-  <li><a href="#">NoneB</a></li>
+  <li><a href="#">AucunA</a></li>
+  <li><a href="#">AucunB</a></li>
 
-  <li><a href="#">NoneC</a></li>
-  <li><a href="#">NoneD</a></li>
+  <li><a href="#">AucunC</a></li>
+  <li><a href="#">AucunD</a></li>
 
-  <li><a href="#">NoneE</a></li>
-  <li><a href="#">NoneF</a></li>
-  <li><a href="#">NoneG</a></li>
+  <li><a href="#">AucunE</a></li>
+  <li><a href="#">AucunF</a></li>
+  <li><a href="#">AucunG</a></li>
 </ul>
 </div>
-<button type="button" class="collapsible">Social Media</button>
+<button type="button" class="collapsible">Médias sociaux</button>
 <div class="content">
-<input type="text" id="myInput5" onkeyup="myFunction6()" placeholder="Search for app names.." title="Type in a name">
+<input type="text" id="myInput5" onkeyup="myFunction6()" placeholder="Rechercher des noms d'applications.." title="Saisir un nom">
 
 <ul id="myUL5">
-  <li><a href="#">NoneA</a></li>
-  <li><a href="#">NoneB</a></li>
+  <li><a href="#">AucunA</a></li>
+  <li><a href="#">AucunB</a></li>
 
-  <li><a href="#">NoneC</a></li>
-  <li><a href="#">NoneD</a></li>
+  <li><a href="#">AucunC</a></li>
+  <li><a href="#">AucunD</a></li>
 
-  <li><a href="#">NoneE</a></li>
-  <li><a href="#">NoneF</a></li>
-  <li><a href="#">NoneG</a></li>
+  <li><a href="#">AucunE</a></li>
+  <li><a href="#">AucunF</a></li>
+  <li><a href="#">AucunG</a></li>
 </ul>
 </div>
 
@@ -952,7 +952,7 @@ for (i = 0; i < coll.length; i++) {
 }
 </script>
 </div>
-<a href="search.html"><button type="button" class="collapsible">Search</button></a>
+<a href="search.html"><button type="button" class="collapsible">Rechercher</button></a>
 
 </div>
 <script>
@@ -968,8 +968,8 @@ function myFunction() {
 <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
