--- a/services/photo-storage.html
+++ b/services/photo-storage.html
@@ -462,25 +462,25 @@ background-color: black;
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-<div class="sidebar">
+  <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -492,11 +492,11 @@ background-color: black;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="client.html">
@@ -508,9 +508,9 @@ background-color: black;
      <li>
        <a href="web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="api.html">
@@ -522,30 +522,30 @@ background-color: black;
      <li>
        <a href="store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
   </div>
   <section class="home-section">
 <ul class="breadcrumb">
-  <li><a href="/home.html">Website</a></li>
-  <li><a href="/web-app.html">Web App</a></li>
-  <li><a href="">Services</a></li>
-  <li>Photo Storage</li>
+<li><a href="/home.html">Site Web</a></li>
+   <li><a href="/web-app.html">Application Web</a></li>
+   <li><a href="">Services</a></li>
+   <li>Stockage de photos</li>
 </ul>
 <br>
     
-      <h1>Photo Storage</h1>
-<p>Photo Storage is a photo storage services provided by the JstMStudio. Photo Storage is a privacy friendly photo storage services. All photos uploaded is stored directly inside your browser using HTML local storage. We do not store any of our users photo in our server or database.</p>
-<hr>
-<h3>Upload</h3>
+       <h1>Stockage de photos</h1>
+<p>Photo Storage est un service de stockage de photos fourni par JstMStudio. Photo Storage est un service de stockage de photos respectueux de la vie privée. Toutes les photos téléchargées sont stockées directement dans votre navigateur à l'aide du stockage local HTML. Nous ne stockons aucune photo de nos utilisateurs dans notre serveur ou notre base de données.</p>
+<h>
+<h3>Télécharger</h3>
 <input type="file" id="files">
-<hr>
-<h2>Your Photo</h2>
-<p id="state">No images stored in JstMStudio Photo Storage. Upload a photo today!</p>
+<h>
+<h2>Votre photo</h2>
+<p id="state">Aucune image stockée dans JstMStudio Photo Storage. Téléchargez une photo aujourd'hui !</p>
 <div id="list"></div>
 
 <a href="#" id="deleteImgs">Delete Images</a>
@@ -606,7 +606,7 @@ function displayNumberOfImgs(){
     document.getElementById("deleteImgs").style.display = "inline";
     
   } else {
-    document.getElementById("state").innerHTML = "No images stored in your browser.";
+    document.getElementById("state").innerHTML = "Aucune image stockée dans votre navigateur.";
     document.getElementById("deleteImgs").style.display = "none";
   }
   
@@ -627,8 +627,8 @@ loadFromLocalStorage();
 <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
